# RaceUtils

./: .gitignore  README.md  pyproject.toml
RaceGenerator/: BaseRaceClass.py  GenerationTools.py  RaceTrack.py
RaceVisualizer/: RacePlotter.py  track.py
race_utils/RaceGenerator/: BaseRaceClass.py  GateShape.py  GenerationTools.py  RaceTrack.py
race_utils/RaceVisualizer/: QuadcopterDrawer.py  RacePlotter.py  track.py
race_utils/RaceVisualizer/Drawers/: BaseDrawer.py  QuadcopterDrawer.py
